add UI for Issues/Books/Users

--- a/src/main/resources/org/proview/test/IssueListView.fxml
+++ b/src/main/resources/org/proview/test/IssueListView.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
@@ -11,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="root" prefHeight="770.0" prefWidth="1412.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.IssueListView">
+<BorderPane fx:id="root" prefHeight="700.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.IssueListView">
     <top>
         <fx:include source="NavBarView.fxml" />
     </top>
@@ -19,15 +21,15 @@
         <fx:include source="AdminManagementNavBarView.fxml" />
     </left>
    <center>
-      <VBox prefHeight="985.0" prefWidth="1303.0" stylesheets="@styles/styles.css">
+      <VBox prefHeight="985.0" prefWidth="1303.0">
          <children>
-            <HBox alignment="CENTER" prefHeight="126.0" spacing="20.0">
+            <HBox alignment="CENTER" prefHeight="126.0" spacing="100.0">
                <children>
-                  <VBox alignment="CENTER" prefHeight="173.0" prefWidth="239.0">
+                  <VBox alignment="CENTER" prefWidth="170.0" styleClass="form">
                      <children>
                         <Label fx:id="totalIssuesLabel" text="100">
                            <font>
-                              <Font size="62.0" />
+                              <Font size="40.0" />
                            </font>
                         </Label>
                         <Label text="Total Issues">
@@ -36,12 +38,15 @@
                            </font>
                         </Label>
                      </children>
+                     <HBox.margin>
+                        <Insets bottom="10.0" top="10.0" />
+                     </HBox.margin>
                   </VBox>
-                  <VBox alignment="CENTER" prefHeight="173.0" prefWidth="239.0">
+                  <VBox alignment="CENTER" prefWidth="170.0" styleClass="form">
                      <children>
                         <Label fx:id="currentIssuesLabel" text="100">
                            <font>
-                              <Font size="62.0" />
+                              <Font size="40.0" />
                            </font>
                         </Label>
                         <Label text="Current Issues">
@@ -50,12 +55,15 @@
                            </font>
                         </Label>
                      </children>
+                     <HBox.margin>
+                        <Insets bottom="10.0" top="10.0" />
+                     </HBox.margin>
                   </VBox>
-                  <VBox alignment="CENTER" prefHeight="173.0" prefWidth="239.0">
+                  <VBox alignment="CENTER" prefWidth="170.0" styleClass="form">
                      <children>
                         <Label fx:id="overdueLabel" text="100">
                            <font>
-                              <Font size="62.0" />
+                              <Font size="40.0" />
                            </font>
                         </Label>
                         <Label text="Overdue">
@@ -64,6 +72,9 @@
                            </font>
                         </Label>
                      </children>
+                     <HBox.margin>
+                        <Insets bottom="10.0" top="10.0" />
+                     </HBox.margin>
                   </VBox>
                </children>
             </HBox>
@@ -75,8 +86,8 @@
                            <children>
                               <HBox prefHeight="51.0" prefWidth="1305.0" spacing="20.0">
                                  <children>
-                                    <ComboBox fx:id="currentColumnComboBox" minWidth="100.0" prefWidth="150.0" promptText="Column" />
-                                    <TextField fx:id="currentSearchTextField" prefHeight="25.0" prefWidth="1138.0" promptText="Search" />
+                                    <ComboBox fx:id="currentColumnComboBox" minWidth="100.0" prefWidth="162.0" promptText="Column" styleClass="table-button" />
+                                    <TextField fx:id="currentSearchTextField" prefHeight="25.0" prefWidth="995.0" promptText="Search" styleClass="text-input-field" />
                                  </children>
                               </HBox>
                               <TableView fx:id="borrowingTableView" prefHeight="547.0" prefWidth="1305.0">
@@ -94,8 +105,8 @@
                            <children>
                               <HBox prefHeight="51.0" prefWidth="1305.0" spacing="20.0">
                                  <children>
-                                    <ComboBox fx:id="pastColumnComboBox" prefHeight="25.0" prefWidth="148.0" promptText="Column" />
-                                    <TextField fx:id="pastSearchTextField" prefHeight="25.0" prefWidth="1135.0" promptText="Search" />
+                                    <ComboBox fx:id="pastColumnComboBox" prefHeight="25.0" prefWidth="150.0" promptText="Column" styleClass="table-button" />
+                                    <TextField fx:id="pastSearchTextField" prefHeight="25.0" prefWidth="1008.0" promptText="Search" styleClass="text-input-field" />
                                  </children>
                               </HBox>
                               <TableView fx:id="borrowedTableView" prefHeight="547.0" prefWidth="1305.0">
@@ -110,6 +121,10 @@
               </tabs>
             </TabPane>
          </children>
+         <stylesheets>
+            <URL value="@styles/styles.css" />
+            <URL value="@styles/TableStyle.css" />
+         </stylesheets>
       </VBox>
    </center>
 </BorderPane>
