--- a/src/main/resources/org/proview/test/UserManagementForAdminView.fxml
+++ b/src/main/resources/org/proview/test/UserManagementForAdminView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
@@ -10,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="691.0" prefWidth="1233.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.UserManagementForAdminView">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.UserManagementForAdminView">
     <top>
         <fx:include source="NavBarView.fxml" />
     </top>
@@ -18,15 +19,15 @@
         <fx:include source="AdminManagementNavBarView.fxml" />
     </left>
     <center>
-      <VBox prefHeight="200.0" prefWidth="100.0" stylesheets="@styles/styles.css" BorderPane.alignment="CENTER">
+      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
-            <HBox alignment="CENTER" prefHeight="126.0" prefWidth="1126.0" spacing="20.0">
+            <HBox alignment="CENTER" prefHeight="126.0" prefWidth="1126.0" spacing="50.0">
                <children>
-                  <VBox alignment="CENTER" prefHeight="147.0" prefWidth="239.0">
+                  <VBox alignment="CENTER" prefHeight="147.0" prefWidth="270.0" styleClass="form">
                      <children>
                         <Label fx:id="totalUsersLabel" text="100">
                            <font>
-                              <Font size="62.0" />
+                              <Font size="40.0" />
                            </font>
                         </Label>
                         <Label text="Total Users">
@@ -35,12 +36,15 @@
                            </font>
                         </Label>
                      </children>
+                     <HBox.margin>
+                        <Insets bottom="10.0" top="10.0" />
+                     </HBox.margin>
                   </VBox>
-                  <VBox alignment="CENTER" prefHeight="147.0" prefWidth="239.0">
+                  <VBox alignment="CENTER" prefHeight="147.0" prefWidth="270.0" styleClass="form">
                      <children>
                         <Label fx:id="todayRegisLabel" text="100">
                            <font>
-                              <Font size="62.0" />
+                              <Font size="40.0" />
                            </font>
                         </Label>
                         <Label text="Today Registrations">
@@ -49,12 +53,15 @@
                            </font>
                         </Label>
                      </children>
+                     <HBox.margin>
+                        <Insets bottom="10.0" top="10.0" />
+                     </HBox.margin>
                   </VBox>
-                  <VBox alignment="CENTER" prefHeight="147.0" prefWidth="256.0">
+                  <VBox alignment="CENTER" prefHeight="147.0" prefWidth="270.0" styleClass="form">
                      <children>
                         <Label fx:id="thisWeekRegisLabel" text="100">
                            <font>
-                              <Font size="62.0" />
+                              <Font size="40.0" />
                            </font>
                         </Label>
                         <Label text="This Week Registrations">
@@ -64,15 +71,15 @@
                         </Label>
                      </children>
                      <HBox.margin>
-                        <Insets left="10.0" />
+                        <Insets bottom="10.0" top="10.0" />
                      </HBox.margin>
                   </VBox>
                </children>
             </HBox>
-            <HBox prefHeight="25.0" prefWidth="200.0" spacing="20.0">
+            <HBox prefHeight="25.0" prefWidth="200.0" spacing="20.0" styleClass="table-button">
                <children>
-                  <ComboBox fx:id="columnComboBox" prefWidth="150.0" promptText="Column" />
-                  <TextField fx:id="searchTextField" prefHeight="25.0" prefWidth="1100.0" promptText="Search" />
+                  <ComboBox fx:id="columnComboBox" prefHeight="25.0" prefWidth="150.0" promptText="Column" styleClass="table-button" />
+                  <TextField fx:id="searchTextField" prefHeight="25.0" prefWidth="983.0" promptText="Search" styleClass="text-input-field" />
                </children>
             </HBox>
             <TableView fx:id="usersTableView" prefHeight="472.0" prefWidth="1126.0">
@@ -81,6 +88,10 @@
                </columnResizePolicy>
             </TableView>
          </children>
+         <stylesheets>
+            <URL value="@styles/styles.css" />
+            <URL value="@styles/TableStyle.css" />
+         </stylesheets>
       </VBox>
    </center>
 </BorderPane>
