--- a/src/main/resources/org/proview/test/AdminDashboardView.fxml
+++ b/src/main/resources/org/proview/test/AdminDashboardView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.chart.BarChart?>
 <?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.LineChart?>
@@ -16,7 +17,7 @@
     <top>
         <fx:include source="NavBarView.fxml" />
     </top>
-    <center>
+   <right>
       <ScrollPane prefHeight="645.0" prefWidth="1305.0" stylesheets="@styles/DashboardView.css" BorderPane.alignment="CENTER">
          <content>
             <VBox alignment="TOP_CENTER" prefHeight="743.0" prefWidth="1282.0" spacing="10.0">
@@ -73,10 +74,13 @@
                           </yAxis>
                         </LineChart>
                      </children>
+                     <VBox.margin>
+                        <Insets bottom="20.0" />
+                     </VBox.margin>
                   </HBox>
                </children>
             </VBox>
          </content>
       </ScrollPane>
-   </center>
+   </right>
 </BorderPane>
