--- a/src/main/resources/org/proview/test/styles/TableStyle.css
+++ b/src/main/resources/org/proview/test/styles/TableStyle.css
@@ -1,5 +1,5 @@
 .form {
-    -fx-padding: 20px;
+    /*-fx-padding: 10px;*/
     -fx-background-color: #ffffff;
     -fx-background-radius: 20px;
     -fx-border-radius: 20px;
@@ -61,44 +61,9 @@
     -fx-background-color: #ffffff;
     -fx-text-fill: #000000;
     -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.1), 10, 0, 0, 4);
-    -fx-padding: 5px 10px;
     -fx-border-radius: 10px;
     -fx-background-radius: 10px;
     -fx-cursor: hand;
-}
-
-.choose-file-button {
-    -fx-background-color: #ffffff;
-    -fx-text-fill: #000000;
-    -fx-font-weight: bold;
-    -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.1), 10, 0, 0, 4);
-    -fx-padding: 5px 10px;
-    -fx-border-radius: 10px;
-    -fx-background-radius: 10px;
-    -fx-cursor: hand;
-}
-
-.choose-file-button:hover {
-    -fx-background-color: -dark-blue;
-    -fx-text-fill: #ffffff;
-}
-
-.confirm-button {
-    -fx-font-size: 12px;
-    -fx-font-weight: bold;
-    -fx-text-fill: #ffffff;
-    -fx-background-color: -red;
-    -fx-background-radius: 10px;
-    -fx-padding: 5px 10px;
-}
-
-.confirm-button:hover {
-    -fx-background-color: -dark-blue;
-    -fx-text-fill: #ffffff;
-}
-
-.confirm-button:disabled {
-    -fx-cursor: not-allowed;
 }
 
 .text-input-field {
