--- a/src/main/resources/org/proview/test/ProfileView.fxml
+++ b/src/main/resources/org/proview/test/ProfileView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
@@ -17,9 +18,9 @@
       <fx:include source="NavBarView.fxml" />
    </top>
    <left>
-      <ScrollPane hbarPolicy="NEVER" prefWidth="300.0" vbarPolicy="NEVER" BorderPane.alignment="CENTER">
+      <ScrollPane hbarPolicy="NEVER" prefWidth="320.0" vbarPolicy="NEVER" BorderPane.alignment="CENTER">
          <content>
-            <VBox spacing="10.0">
+            <VBox prefWidth="320.0" spacing="10.0">
                <children>
                   <HBox alignment="CENTER">
                      <children>
@@ -29,7 +30,7 @@
                         <Insets top="10.0" />
                      </VBox.margin>
                   </HBox>
-                  <HBox alignment="CENTER" spacing="20.0">
+                  <HBox alignment="CENTER" spacing="20.0" styleClass="form">
                      <children>
                         <VBox>
                            <children>
@@ -51,7 +52,7 @@
                               <Insets left="10.0" />
                            </HBox.margin>
                         </VBox>
-                        <Button fx:id="editProfileButton" mnemonicParsing="false" onAction="#onEditProfileButtonClick">
+                        <Button fx:id="editProfileButton" mnemonicParsing="false" onAction="#onEditProfileButtonClick" styleClass="icon-button">
                            <graphic>
                               <FontIcon iconLiteral="far-edit" iconSize="14">
                                  <font>
@@ -65,10 +66,10 @@
                         </Button>
                      </children>
                      <VBox.margin>
-                        <Insets left="5.0" />
+                        <Insets left="20.0" right="20.0" />
                      </VBox.margin>
                   </HBox>
-                  <VBox fx:id="recentActivityListVBox" prefWidth="300.0" spacing="5.0">
+                  <VBox fx:id="recentActivityListVBox" spacing="5.0">
                      <VBox.margin>
                         <Insets left="5.0" right="5.0" />
                      </VBox.margin>
@@ -88,13 +89,23 @@
                <children>
                   <HBox alignment="CENTER_RIGHT" prefHeight="56.0" prefWidth="933.0">
                      <children>
-                        <Button fx:id="cardButton" mnemonicParsing="false" onAction="#onCardButtonClicked" styleClass="view-button" />
-                        <Button fx:id="compactButton" mnemonicParsing="false" onAction="#onCompactButtonClicked" styleClass="view-button">
+                        <Button fx:id="cardButton" mnemonicParsing="false" onAction="#onCardButtonClicked">
+                           <styleClass>
+                              <String fx:value="view-button" />
+                              <String fx:value="icon-button" />
+                           </styleClass>
+                        </Button>
+                        <Button fx:id="compactButton" mnemonicParsing="false" onAction="#onCompactButtonClicked">
                            <HBox.margin>
                               <Insets right="100.0" />
                            </HBox.margin>
+                           <styleClass>
+                              <String fx:value="view-button" />
+                              <String fx:value="icon-button" />
+                           </styleClass>
                         </Button>
-                     </children></HBox>
+                     </children>
+                  </HBox>
                </children>
             </VBox>
          </content>
