--- a/src/main/resources/org/proview/test/styles/RegisterView.css
+++ b/src/main/resources/org/proview/test/styles/RegisterView.css
@@ -30,6 +30,33 @@
     -fx-background-radius: 6px;
 }
 
+.text-area .scroll-pane .viewport {
+    -fx-background-color: transparent;
+    -fx-padding: 0;
+}
+
+.text-area .scroll-pane .content {
+    -fx-background-color: transparent;
+    -fx-padding: 0;
+}
+
+.flow-pane {
+    -fx-border-color: #dcdcdc;
+    -fx-border-radius: 10;
+    -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.1), 10, 0, 0, 4);
+    -fx-padding: 5 5 5 5;
+}
+
+.menu-button {
+    -fx-background-color: #ffffff;
+    -fx-text-fill: #000000;
+    -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.1), 10, 0, 0, 4);
+    /*-fx-padding: 3px;*/
+    -fx-border-radius: 10px;
+    -fx-background-radius: 10px;
+    -fx-cursor: hand;
+}
+
 /* Styling for the buttons */
 .button {
     -fx-font-size: 14px;
