--- a/src/main/resources/org/proview/test/TagManageView.fxml
+++ b/src/main/resources/org/proview/test/TagManageView.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="691.0" prefWidth="1233.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.TagManageView">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="691.0" prefWidth="1233.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.TagManageView">
     <top>
         <fx:include source="NavBarView.fxml" />
     </top>
@@ -23,12 +23,12 @@
     <center>
       <VBox prefHeight="200.0" prefWidth="100.0" stylesheets="@styles/styles.css" BorderPane.alignment="CENTER">
          <children>
-            <HBox prefHeight="619.0">
+            <HBox prefHeight="619.0" prefWidth="996.0">
                <VBox.margin>
-                  <Insets left="20.0" right="100.0" top="20.0" />
+                  <Insets left="20.0" right="60.0" top="20.0" />
                </VBox.margin>
                <children>
-                  <TableView fx:id="tagTable" prefHeight="451.0" prefWidth="572.0" tableMenuButtonVisible="true">
+                  <TableView fx:id="tagTable" prefHeight="451.0" prefWidth="600.0" tableMenuButtonVisible="true">
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                      </columnResizePolicy>
