--- a/src/main/resources/org/proview/test/ProfileBookListCardView.fxml
+++ b/src/main/resources/org/proview/test/ProfileBookListCardView.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="1000.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Container.ProfileBookListView">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="1000.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Container.ProfileBookListView">
    <children>
       <HBox prefWidth="980.0" spacing="5.0">
          <children>
@@ -59,7 +59,7 @@
                   </Label>
                   <VBox fx:id="overdueListVBox" prefHeight="200.0" prefWidth="450.0" spacing="10.0">
                      <VBox.margin>
-                        <Insets left="10.0" />
+                        <Insets bottom="10.0" left="10.0" />
                      </VBox.margin></VBox>
                </children>
             </VBox>
@@ -75,7 +75,7 @@
                   </Label>
                   <VBox fx:id="pastIssuesListVBox" prefHeight="200.0" prefWidth="450.0" spacing="10.0">
                      <VBox.margin>
-                        <Insets left="10.0" />
+                        <Insets bottom="10.0" left="10.0" />
                      </VBox.margin></VBox>
                </children>
             </VBox>
