--- a/src/main/resources/org/proview/test/HomeView.fxml
+++ b/src/main/resources/org/proview/test/HomeView.fxml
@@ -8,12 +8,12 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="homeBorderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.HomeView">
+<BorderPane fx:id="homeBorderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.HomeView">
    <top>
       <fx:include source="NavBarView.fxml" />
    </top>
    <left>
-      <ScrollPane hbarPolicy="NEVER" prefWidth="320.0" vbarPolicy="NEVER" BorderPane.alignment="CENTER">
+      <ScrollPane hbarPolicy="NEVER" prefWidth="330.0" vbarPolicy="NEVER" BorderPane.alignment="CENTER">
          <content>
             <VBox spacing="10.0">
                <children>
@@ -22,12 +22,12 @@
                         <Font name="System Bold" size="20.0" />
                      </font>
                      <VBox.margin>
-                        <Insets left="5.0" top="20.0" />
+                        <Insets left="10.0" top="20.0" />
                      </VBox.margin>
                   </Label>
                   <VBox fx:id="recentReviewListVBox" prefWidth="300.0" spacing="10.0">
                      <padding>
-                        <Insets left="5.0" right="5.0" />
+                        <Insets bottom="10.0" left="10.0" right="5.0" />
                      </padding>
                   </VBox>
                </children>
@@ -59,6 +59,9 @@
                      <HBox.margin>
                         <Insets left="5.0" />
                      </HBox.margin>
+                     <padding>
+                        <Insets bottom="10.0" />
+                     </padding>
                   </VBox>
                   <VBox prefHeight="586.0" prefWidth="475.0" spacing="10.0">
                      <children>
@@ -76,6 +79,9 @@
                            </VBox.margin>
                         </VBox>
                      </children>
+                     <padding>
+                        <Insets bottom="10.0" />
+                     </padding>
                   </VBox>
                </children>
             </HBox>
