--- a/src/main/resources/org/proview/test/styles/EditBookInfoView.css
+++ b/src/main/resources/org/proview/test/styles/EditBookInfoView.css
@@ -35,3 +35,13 @@
     -fx-border-radius: 6px;
     -fx-background-radius: 6px;
 }
+
+.text-area .scroll-pane .viewport {
+    -fx-background-color: transparent;
+    -fx-padding: 0;
+}
+
+.text-area .scroll-pane .content {
+    -fx-background-color: transparent;
+    -fx-padding: 0;
+}
